Giving myself a checkmark for the fixed nav stretch goal as I got it to work. However, I'd have to re-do a lot of styling for this to look decent, so I'm going to modify files to be the way they were and make a final push with the style as it was since I'd rather have a good design than a fixed nav.

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,9 @@ a {
 }
 .nav-menu .nav-bar {
   display: flex;
+  position: fixed;
+  overflow: hidden;
+  opacity: 2;
 }
 .nav-menu .nav-bar nav {
   justify-content: center;
