--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,9 @@
 
     .nav-bar {
         display: flex;
+        position: fixed;
+        overflow: hidden;
+        opacity: 2;
 
         nav {
             justify-content: center;
